# crypto-monitor

./: .gitignore  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yaml
data/: data.parquet
databricks/jobs/: ingest_job.json  train_job.json
src/crypto_monitor/app/: main.py  model_loader.py
src/crypto_monitor/etl/: binance_ingest.py
src/crypto_monitor/jobs/: ingest_job.py  train_job.py
src/crypto_monitor/ml/: create_mock_prices.py  prepare_features.py  train_model.py
src/crypto_monitor/utils/: logging_utils.py  spark.py
tests/ml/: test_create_mock_prices.py  test_prepare_features.py  test_train_model.py
